--- a/deployment.yml
+++ b/deployment.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: flask-app-container
-        image: sajaldhimanitc1999/git-ops-app:v1
+        image: sajaldhimanitc1999/git-ops-app:26
         ports:
         - containerPort: 5000
